Improved packaging scripts.

--- a/debian/control
+++ b/debian/control
@@ -3,18 +3,20 @@ Section: python
 Priority: optional
 Maintainer: Thomas Dreibholz <dreibh@simula.no>
 Build-Depends: debhelper (>= 9),
+               libadns1-dev,
                libfile-fcntllock-perl,
                python-support | dh-python,
                python3 (>= 3.2~),
-               python3-setuptools,
-               libadns1-dev
+               python3-setuptools
 Standards-Version: 3.9.7
-X-Python-Version: >= 3.2
+X-Python3-Version: >= 3.2
 Homepage: https://github.com/trolldbois/python3-adns
 
 Package: python3-adns
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends},
+         ${python:Depends},
+         ${shlibs:Depends}
 Description: Python bindings to the asynchronous DNS resolver library
  This module provides a Python binding to the adns asynchronous DNS
  resolver library.
