--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Build-Depends: debhelper (>= 9),
                libfile-fcntllock-perl,
                python-support | dh-python,
                python3 (>= 3.2~),
+               python3-dev (>= 3.2~),
                python3-setuptools
 Standards-Version: 3.9.7
 X-Python3-Version: >= 3.2
