--- a/debian/rules
+++ b/debian/rules
@@ -3,26 +3,18 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# %:
-# # 	dh --with python3 --buildsystem=python_distutils $@
-# 	dh $@ --with python3 # --buildsystem=python_distutils
-# 
-# 	
-# 
-
 
 %:
 	dh $@ --with python3
 
 override_dh_auto_build:
-	# NOTE: This is for the package "nornet-api", hence the following --root parameter!
 	set -ex; for python in $(shell py3versions -r); do \
 		$$python setup.py build ; \
 	done
 
 # Use setup.py to install the API module into the right directory.
 override_dh_auto_install:
-	# NOTE: This is for the package "nornet-api", hence the following --root parameter!
+	# NOTE: This is for the package "python3-adns", hence the following --root parameter!
 	set -ex; for python in $(shell py3versions -r); do \
-		$$python setup.py install --install-layout=deb --root $(CURDIR)/debian/nornet-api ; \
+		$$python setup.py install --install-layout=deb --root $(CURDIR)/debian/python3-adns ; \
 	done
