--- a/debian/rules
+++ b/debian/rules
@@ -8,13 +8,9 @@
 	dh $@ --with python3
 
 override_dh_auto_build:
-	set -ex; for python in $(shell py3versions -r); do \
-		$$python setup.py build ; \
-	done
+	python3 setup.py build ; \
 
 # Use setup.py to install the API module into the right directory.
 override_dh_auto_install:
 	# NOTE: This is for the package "python3-adns", hence the following --root parameter!
-	set -ex; for python in $(shell py3versions -r); do \
-		$$python setup.py install --install-layout=deb --root $(CURDIR)/debian/python3-adns ; \
-	done
+	python3 setup.py install --install-layout=deb --root $(CURDIR)/debian/python3-adns ; \
