--- a/debian/control
+++ b/debian/control
@@ -5,9 +5,9 @@ Maintainer: Thomas Dreibholz <dreibh@simula.no>
 Build-Depends: debhelper (>= 9),
                libadns1-dev,
                libfile-fcntllock-perl,
-               libpython3-all-dev,
-               python-minimal,
-               python3-all
+               libpython3-all-dev | python3-all-dev,
+               python3-all,
+               python3-minimal
 Standards-Version: 3.9.6
 X-Python3-Version: >= 3.2
 Homepage: https://github.com/trolldbois/python3-adns
