Some packaging file fixes.

--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,18 @@
 Source: python3-adns
 Section: python
 Priority: optional
-Maintainer: Thomas Dreibholz <dreibh@simula.no>
+Maintainer: Thomas Dreibholz <dreibh@iem.uni-due.de>
 Build-Depends: debhelper (>= 9),
                libadns1-dev,
                libfile-fcntllock-perl,
                libpython3-all-dev | python3-all-dev,
                python3-all,
                python3-minimal
-Standards-Version: 3.9.6
+Standards-Version: 3.9.7
 X-Python3-Version: >= 3.2
 Homepage: https://github.com/trolldbois/python3-adns
+Vcs-Git: https://github.com/dreibh/python3-adns.git
+Vcs-Browser: https://github.com/dreibh/python3-adns/
 
 Package: python3-adns
 Architecture: any
