--- a/packaging.conf
+++ b/packaging.conf
@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # ---------------------------------------------------------
-CONFOPT=""
 MAKE_DIST="./make-dist"
+NOT_TARGET_DISTRIBUTIONS="lucid"   # <<-- Distrubutions which are *not* supported!
 MAINTAINER="Thomas Dreibholz <dreibh@iem.uni-due.de>"
 DEBIAN_LAST_ENTRY=""
 UBUNTU_LAST_ENTRY=""
