--- a/debian/rules
+++ b/debian/rules
@@ -1,26 +1,10 @@
 #!/usr/bin/make -f
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
-
-
-build3vers := $(shell py3versions -rv)
+# export DH_VERBOSE=1
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 %:
-	dh $@ --with python3
-
-override_dh_auto_build:
-	set -e ; \
-	for i in $(build3vers); do \
-		python$$i ./setup.py build;\
-	done
-
-override_dh_auto_install:
-	mkdir -p $(CURDIR)/debian/python3-adns/usr/share/python3-adns/
-	set -e ; \
-	for i in $(build3vers); do \
-		python$$i ./setup.py install --root $(CURDIR)/debian/python3-adns; \
-	done
+	dh $@ --with python3 --buildsystem=pybuild
 
 override_dh_auto_clean:
 	dh_clean
