--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 9),
                libpython3-all-dev | python3-all-dev,
                python3-all
 Standards-Version: 4.4.0.1
+Rules-Requires-Root: no
 Homepage: https://github.com/trolldbois/python3-adns
 Vcs-Git: https://github.com/dreibh/python3-adns.git
 Vcs-Browser: https://github.com/dreibh/python3-adns/
